style.css
/* ... */
.image-header-desktop {
    display: none;
}

@media (min-width: 768px) {
    .popup-accent {
        display: none;
    }

    .nav {
        width: 95%;
    }

    .nav-links {
        display: flex;
        justify-content: space-between;
        align-items: center;
        width: 58%;
        position: static;
        transform: translateX(0);
        background-color: transparent;
        padding: 0;
    }

    .nav-item {
        padding: 0;
    }

    .nav-link {
        color: var(--white);
    }

    #contact {
        background-color: var(--white);
    }

    #contact:hover {
        color: var(--white);
        background-color: hsl(199, 100%, 75%);
        transition: 0.15s;
    }

    #contact-nav-item {
        margin: 0;
    }
    
    .burger, .hide-navbar {
        display: none;
    }

    .image-header-desktop {
        display: block;
        width: 100%;
    }
    
    .image-header-mobile {
        display: none;
    }

    .header-text {
        font-size: 2.8rem;
    }
}

@media (min-width: 1000px) {
    .logo {
        width: 10rem;
    }

    .nav-links {
        width: 40%;
    }
}

@media(min-width: 1200px) {
    .nav {
        padding-top: 0.7rem;
    }

    .nav-links {
        width: 34%;
    }

    .header-text {
        font-size: 3.5rem;
        padding-top: 3.5rem;
        letter-spacing: 0.7rem;
    }

    .header-arrow {
        padding-top: 4.2rem;
    }
}

  /* ///////////// */
 /* Advertisement */
/* ///////////// */
.image-transform-mobile,
.image-stand-out-mobile,
.image-graphic-design-mobile,
.image-photography-mobile {
    width: 100%;
}

.image-transform-desktop, 
.image-stand-out-desktop,
.image-graphic-design-desktop,
.image-photography-desktop {
    display: none;
}

.transform-info,
.stand-out-info {
    width: 88%;
    margin: 0 auto;
    padding: 4rem 0;
}

.transform-title,
.transform-link,
.stand-out-title,
.stand-out-link {
    color: var(--very-dark-desaturated-blue);
}

.transform-link,
.stand-out-link {
    position: relative;
    align-self: flex-start;
    padding: 0 0.5rem;
}

.transform-link::after,
.stand-out-link::after {
    content: '';
    z-index: -1;
    width: 100%;
    height: 0.5rem;
    position: absolute;
    left: 0;
    top: 68%;
    border-radius: 1rem;
    transition: 0.15s;
}

.transform-link::after {
    background-color: hsl(51, 95%, 83%);
}

.transform-link:hover::after {
    background-color: var(--yellow);
}

.stand-out-link::after {
    background-color: hsl(7, 91%, 91%);
}

.stand-out-link:hover::after {
    background-color: var(--soft-red);
}

.transform-title,
.stand-out-title {
    font-family: 'Fraunces', serif;
    font-size: 1.7em;
    font-weight: 900;
}

.transform-paragraph,
.stand-out-paragraph {
    color: var(--dark-grayish-blue);
    line-height: 1.7rem;
    padding: 1.5rem 0;
}

.transform-link, 
.stand-out-link {
    text-transform: uppercase;
    font-family: 'Fraunces', serif;
    font-weight: 900;
    font-size: 0.95em;
}

.graphic-design, 
.photography {
    position: relative;
}

.graphic-design {
    color: var(--dark-desaturated-cyan);
}

.photography {
    color: var(--dark-blue);
}

.graphic-design-info,
.photography-info {
    position: absolute;
    top: 67%;
    left: 50%;
    transform: translateX(-50%);
    width: 92%;

}

.graphic-design-title,
.photography-title {
    font-family: 'Fraunces', serif;
    font-size: 1.55em;
    font-weight: 900;

}

.graphic-design-paragraph,
.photography-paragraph {
    font-size: 0.9em;
    font-weight: 700;
    line-height: 1.6em;
    padding-top: 1.2rem;

}


@media (min-width: 480px) {
    .transform-info,
    .stand-out-info {
        padding: 5rem 0;
        max-width: 33rem;
    }
    .graphic-design-info,
    .photography-info {
        max-width: 36rem;
    }

    .graphic-design-paragraph,
    .photography-paragraph {
    font-size: 0.95em;
    }
}

@media (min-width: 768px) {
    .image-transform-mobile, 
    .image-stand-out-mobile,
    .image-graphic-design-mobile,
    .image-photography-mobile {
        display: none;
    }

    .image-transform-desktop,
    .image-stand-out-desktop,
    .image-graphic-design-desktop,
    .image-photography-desktop {
        display: block;
        width: 100%;
    }

    .transform-section,
    .stand-out-section,
    .cherry-tangerine {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-auto-flow: dense;
    }

    .image-stand-out-desktop,
    .transform-info,
    .graphic-design {
        grid-column: 1 / 2;
    }

    .image-transform-desktop,
    .stand-out-info,
    .photography {
        grid-column: 2 / 3;
    }

    .transform-info,
    .stand-out-info {
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: start;
        padding: 0;
        width: 75%;
        max-width: 24rem;
    }

    .transform-title,
    .stand-out-title {
        font-size: 1.8rem;
    }

    .transform-paragraph,
    .stand-out-paragraph {
        font-size: 0.95rem;
        padding: 1rem 0;
    }

    .transform-link,
    .stand-out-link {
        font-size: 0.85rem;
    }

    .graphic-design-info,
    .photography-info {
        top: 60%;
        width: 80%;
        max-width: 22.188rem;
    }
    
    .graphic-design-title,
    .photography-title {
        font-size: 1.5rem;
    }

    .graphic-design-paragraph,
    .photography-paragraph {
        font-size: 0.9rem;
        padding-top: 0.6rem;
    }
}
/* ... */

